package service;

import core.payload.request.CreatePostRequest;
import core.payload.response.PostResponse;
import java.util.Collections;
import java.util.List;
import java.util.Optional;
import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.core.ParameterizedTypeReference;
import org.springframework.stereotype.Service;
import org.springframework.transaction.annotation.Transactional;
import org.springframework.web.reactive.function.client.WebClientResponseException;

// This JavaDoc comment was generated by Github Copilot
/**
 * Service for managing Post entities. Provides methods to retrieve and create
 * posts.
 */
@Service
public class PostService {
  @Autowired
  private ApiClientService apiClient;

  // Listener that runs when a post is updated
  private Runnable postUpdateListener;

  /**
   * Retrieves a post by its ID.
   *
   * @param id the Id of the post to retrieve.
   * @return an {@link Optional} containing the post if found, else empty.
   */
  @Transactional(readOnly = true)
  public Optional<PostResponse> getPostById(Long id) {
    PostResponse post;
    try {
      post = this.apiClient.get("/api/posts/" + id, PostResponse.class);
    } catch (WebClientResponseException.NotFound e) {
      return Optional.empty();
    }

    return Optional.of(post);
  }

  /**
   * Retrieves a post by its ID.
   *
   * @param id            the Id of the post to retrieve.
   * @param withRelations whether to fetch related entities (e.g. likes)
   * @return an {@link Optional} containing the post if found, else empty.
   */
  @Transactional(readOnly = true)
  public Optional<PostResponse> getPostById(Long id, boolean withRelations) {
    // TODO: implement this if needed
    throw new UnsupportedOperationException();
  }

  // This JavaDoc comment was generated by Github Copilot
  /**
   * Creates a new post.
   *
   * @param content the content of the post
   * @return the saved post
   */
  @Transactional
  public PostResponse createPost(String content, Long originalId) {
    if (content == null) {
      throw new IllegalArgumentException("Post cannot be null");
    }

    PostResponse post = this.apiClient.post("/api/posts",
        new CreatePostRequest(content, originalId), PostResponse.class);

    return post;
  }

  /** Returns a list of all posts. */
  @Transactional(readOnly = true)
  public List<PostResponse> getAllPosts() {
    return this.apiClient.get("/api/posts", new ParameterizedTypeReference<List<PostResponse>>() {
    });
  }

  /** Returns a list of all posts. */
  @Transactional(readOnly = true)
  public List<PostResponse> getAllPosts(boolean withRelations) {
    // TODO: implement this if needed
    throw new UnsupportedOperationException();
  }

  /** Returns a list of all posts by the authenticated user. */
  @Transactional(readOnly = true)
  public List<PostResponse> postsByUser() {
    try {
      return this.apiClient.get("/api/posts/mine",
          new ParameterizedTypeReference<List<PostResponse>>() {
          });
    } catch (WebClientResponseException e) {
      System.err.println("Error fetching posts by user: " + e.getMessage());
      return Collections.emptyList();
    }
  }

  /** Likes/unlikes the @param post by the @param user . */
  @Transactional
  public PostResponse likePost(Long postId) {
    PostResponse response = this.apiClient.post("/api/posts/" + postId + "/likes",
        Collections.emptyMap(), PostResponse.class);

    notifyPostUpdated(); // Only notify **after** the like/unlike is processed
    return response;
  }

  // TODO: add if needed
  // public PostResponse update(Post post) {
  // return postRepository.update(post);
  // }

  /**
   * Registers a listener that will be called whenever a post is updated. Meant to
   * call {@link ProfileController#updateProfileCounters()} to refresh post and
   * like counts.
   *
   * @param listener a {@link Runnable} to be executed when posts are updated
   */
  public void setPostUpdateListener(Runnable listener) {
    this.postUpdateListener = listener;
  }

  /**
   * Notifies the registered listener that a post has been updated.
   */
  public void notifyPostUpdated() {
    if (postUpdateListener != null) {
      postUpdateListener.run();
    }
  }

  /**
   * Deletes a post by its ID.
   *
   * @param postId the ID of the post to delete
   */
  @Transactional
  public void deletePost(Long postId) {
    if (postId == null) {
      throw new IllegalArgumentException("Post ID cannot be null");
    }

    try {
      apiClient.delete("/api/posts/" + postId);
      notifyPostUpdated(); // notify listeners after deletion
    } catch (WebClientResponseException.NotFound e) {
      System.err.println("Post with ID " + postId + " not found: " + e.getMessage());
    } catch (WebClientResponseException e) {
      System.err.println("Error deleting post with ID " + postId + ": " + e.getMessage());
    }
  }
}
