package service;

import core.payload.request.LoginRequest;
import core.payload.response.LoginResponse;
import core.payload.response.UserResponse;
import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.stereotype.Service;
import org.springframework.transaction.annotation.Transactional;
import org.springframework.web.reactive.function.client.WebClientResponseException;

// This JavaDoc comment was generated by Github Copilot
/**
 * Service for managing User entities. Handles login, retrieval, and creation of
 * users.
 */
@Service
public class UserService {
  @Autowired
  private ApiClientService apiClient;

  private UserResponse loggedInUser;

  // This JavaDoc comment was generated by Github Copilot
  /** Returns the currently logged-in user, if any. */
  @Transactional(readOnly = true)
  public UserResponse getLoggedInUser() {
    return loggedInUser;
  }

  // This JavaDoc comment was generated by Github Copilot
  /**
   * Logs in a user by username and password. Creates a new user if none exists
   * with the given username.
   *
   * @param username the username
   * @param password the password
   * @return true if login succeeded
   */
  public boolean logIn(String username, String password) {
    LoginResponse loginResponse;
    try {
      loginResponse = this.apiClient.post("/auth/login", new LoginRequest(username, password),
          LoginResponse.class);
    } catch (WebClientResponseException.Forbidden e) {
      // 403 http status indicates wrong credentials
      return false;
    }

    apiClient.setJwtToken(loginResponse.jwtToken());
    this.updateLoggedInUser();

    return true;
  }

  private void updateLoggedInUser() {
    UserResponse user = this.apiClient.get("/auth/me", UserResponse.class);

    this.loggedInUser = user;
  }
}
