package ui;

import core.payload.response.PostResponse;
import java.io.IOException;
import javafx.fxml.FXML;
import javafx.scene.control.Button;
import javafx.scene.control.Label;
import javafx.scene.control.ListView;
import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.stereotype.Component;
import service.PostService;
import service.UserService;

// This JavaDoc comment was generated by Github Copilot
/**
 * Controller for the main feed view. Displays posts and handles navigation.
 */
@Component
public class FeedController {
  @Autowired
  PostService postService;
  @Autowired
  UserService userService;

  @FXML
  private ListView<PostResponse> feedList;

  @FXML
  @SuppressWarnings("unused")
  private Button profileBtn;

  @FXML
  private Label usernameLabel;
  @FXML
  private Label displayNameLabel;

  // This JavaDoc comment was generated by Github Copilot
  /** Initializes the feed list view and populates posts. */
  @FXML
  public void initialize() {
    // Disable the higlight on selectio of posts
    feedList.setSelectionModel(null);
    feedList.setFocusTraversable(false);

    // Use custom cell factory to display each Post using the post.fxml layout and
    // PostCell class
    feedList.setCellFactory(listView -> new PostCell());

    displayNameLabel.setText(userService.getLoggedInUser().displayName());
    usernameLabel.setText("@" + userService.getLoggedInUser().username());
    feedList.getItems().setAll(postService.getAllPosts());

    postService.setPostUpdateListener(this::updateFeed);
  }

  @FXML
  @SuppressWarnings("unused")
  private void switchToMakeNewPost() throws IOException {
    App.setRoot("makeNewPost.fxml");
  }

  @FXML
  @SuppressWarnings("unused")
  private void switchToLogin() throws IOException {
    App.setRoot("login.fxml");
  }

  @FXML
  @SuppressWarnings("unused")
  private void switchToProfile() throws IOException {
    App.setRoot("profile.fxml");
  }

  private void updateFeed() {
    feedList.getItems().setAll(postService.getAllPosts());
  }
}
